docker-compose.yml 수정
- Dockerfile 제거
- kafka-ui 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-
 spring:
   kafka:
     bootstrap-servers:
@@ -11,3 +10,5 @@ spring:
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
+server:
+  port: 8081
