--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,42 @@
-version: '2'
+version: '3.6'
 
 services:
-  zookeeper:
-    container_name: local-zookeeper
-    image: wurstmeister/zookeeper:3.4.6
+  zoo:
+    image: confluentinc/cp-zookeeper:6.2.1
+    container_name: cluster-zoo
+    hostname: zoo
     ports:
       - "2181:2181"
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_SERVER_ID: 1
+      ZOOKEEPER_SERVERS: zoo:2888:3888
 
   kafka:
-    container_name: local-kafka
-    image: wurstmeister/kafka:2.12-2.3.0
-    depends_on:
-      - zookeeper
+    image: confluentinc/cp-kafka:6.2.1
+    container_name: cluster-kafka
+    hostname: kafka
     ports:
       - "9092:9092"
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: 127.0.0.1
-      KAFKA_ADVERTISED_PORT: 9092
-      KAFKA_CREATE_TOPICS: "test_topic:1:1"
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka:19092,LISTENER_DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
+      KAFKA_ZOOKEEPER_CONNECT: "zoo:2181"
+      KAFKA_BROKER_ID: 1
+      KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
+    depends_on:
+      - zoo
+
+  kafka-ui:
+    image: provectuslabs/kafka-ui
+    container_name: cluster-kafka-ui
+    ports:
+      - "8080:8080"
+    environment:
+      KAFKA_CLUSTERS_0_NAME: local
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: PLAINTEXT://kafka:19092
+      KAFKA_CLUSTERS_0_ZOOKEEPER: "zoo:2181"
+    depends_on:
+      - zoo
+      - kafka
